# trading-bot

./: .env.example  .gitignore  README.md  config.yaml  dashboard.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
arbitrage/: __init__.py  arbitrage_engine.py  mev_protection.py  route_scanner.py
clients/: birdeye.py  coingecko.py  dexscreener.py  helius.py  jupiter.py  solana_rpc.py
core/: __init__.py  atr_calculator.py  blacklist_manager.py  config.py  dashboard_bridge.py  database.py  db.py  dedup_manager.py  executor.py  http.py  llm_client.py  llm_scanner.py  logger.py  models.py  orchestrator.py  portfolio_manager.py  regime_client.py  risk_manager.py  safety_monitor.py  schema.py  scoring_engine.py  slippage_model.py  social_collector.py  time_utils.py
dashboard/: __init__.py  activity.py  app.py  components.py  db.py  metrics.py  positions.py  sidebar.py  wallet.py
dashboard/components/: __init__.py  charts.py  metrics.py
dashboard/pages/: __init__.py  arbitrage_panel.py  data_scanner.py  portfolio.py  strategies.py  trade_logs.py
data/: __init__.py  bot.db-shm  dashboard_state.json  jupiter_client.py  liquidity_tracker.py  sentiment_scanner.py  solana_data.py  token_discovery.py  volume_feed.py  wallet_tracker.py
execution/: __init__.py  jupiter_executor.py  trade_logger.py
safety/: __init__.py  anti_rug.py  honeypot_detector.py  risk_scorer.py  token_validator.py
services/: __init__.py  arbitrage.py  base_bucket.py  copy_trading.py  gem_detector.py  hot_trader.py  new_listing.py
strategies/: __init__.py  base_strategy.py  copy_trading.py  gem_detector.py  hot_trading.py
tests/: __init__.py  test_anti_rug.py  test_arbitrage.py  test_atr_calculator.py  test_config.py  test_dedup_blacklist.py  test_jupiter_client.py  test_regime.py  test_risk_manager.py  test_schema.py  test_scoring_engine.py  test_slippage_model.py  test_strategies.py
utils/: honeypot.py
