[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solana-jupiter-bot"
version = "2.0.0"
description = "Automated Solana trading bot using Jupiter DEX aggregator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "loguru>=0.7",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "streamlit>=1.36",
    "pandas>=2.2",
    "plotly>=5.22",
    "tenacity>=8.3",
    "solders>=0.21",
    "solana>=0.34",
    "streamlit-autorefresh>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
